--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,13 +12,13 @@ nav:
       - Miyoo Mini Plus : achats/miyoo_mini_plus.md
       - Carte SD: achats/carte_sd.md
     - 🎭 Cultures:
-      - Accueil: index.md
+      - Page en construction : wip.md
     - 🪄 Créations:
-      - Accueil: index.md
+      - Page en construction : wip.md
     - 🪛 Bricolages:
-      - Accueil: index.md
+      - Page en construction : wip.md
     - 🚀 Developments:
-      - Accueil: index.md
+      - Page en construction : wip.md
 
 theme:
   name: dracula
