--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Détails techniques de la Miyoo Mini Plus : bricolages/details_techniques_de_la_miyoo_mini_plus.md
     - 🚀 Developments:
       - Installation manuelle TelmiOS sur Linux : developments/installation_manuelle_telmios_sur_linux.md
+      - Installation manuelle TelmiOS sur Windows : developments/installation_manuelle_telmios_sur_windows.md
 
 theme:
   name: dracula
