--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
       - Héberger son Store Telmi: stores/heberger_son_store_telmi.md
     - 💳 Achats:
       - Miyoo Mini Plus: achats/miyoo_mini_plus.md
-      - Carte SD: achats/carte_sd.md
+      - Carte Micro SD: achats/carte_micro_sd.md
     - 🎭 Cultures:
       - Page en construction : wip.md
     - 🪄 Créations:
