--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
     - 🪛 Bricolages:
       - Détails techniques de la Miyoo Mini Plus : bricolages/details_techniques_de_la_miyoo_mini_plus.md
     - 🚀 Developments:
+      - Astuces Telmi-Sync : developments/astuces_telmi_sync.md
       - Installation manuelle TelmiOS sur Linux : developments/installation_manuelle_telmios_sur_linux.md
       - Installation manuelle TelmiOS sur Windows : developments/installation_manuelle_telmios_sur_windows.md
 
